--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -1,4 +1,6 @@
-theme: minima
-
 title: "Blog"
 description: "Here I will write everything I learn during my internship at JdRobots."
+
+theme: minima
+stylesheets:
+  - assets/main.css
