Modificado tamaño de imagen y nombres

--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -1,4 +1,4 @@
-title: "Blog"
+title: "JdRobot Internship Blog"
 description: "Here I will write everything I learn during my internship at JdRobots."
 
 theme: minima
