--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -23,7 +23,7 @@ description: >- # used by seo meta and the atom feed
 
 # Fill in the protocol & hostname for your site.
 # e.g. 'https://username.github.io', note that it does not end with a '/'.
-url: "https://roboticslaburjc.github.io"
+url: "https://theroboticsclub.github.io"
 
 github:
   username: dduro2020 # change to your github username
